# om_modal

./: Cargo.toml  readme.md
examples/: pendel.mo  schwinger.mo  schwinger2.mo
src/: main.rs  misc.rs
