[package]
name = "om_modal"
version = "0.1.0"
edition = "2024"
authors = ["Quentin Huss <quentinhuss@hotmail.com>"]
description = "Lightweight GUI tool to compute eigenfrequencies of modelica models."
repository = "https://github.com/KwentiN-ui/om_modal"
license = "MIT"
readme = "readme.md"

[dependencies]
confy = "2.0.0"
iced = "0.14.0"
nalgebra = "0.34.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.25.0"

[[bin]]
name = "om-modal"
path = "src/main.rs"
